Add Data to BookList Component

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "embla-carousel": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "rc-slider": "^11.1.7",
     "rc-tooltip": "^6.2.1",
     "react": "^18.3.1",
@@ -14,6 +16,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "swiper": "^11.1.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
